syntax = "proto3";

option java_multiple_files = true;
//生成java代码的package
option java_package = "com.nwnu.blockchain.protobuf";
//创建的javaBean的文件名
option java_outer_classname = "MistralProto";
// 可以生成rpc接口
//option java_generic_services = true;

package com.nwnu.blockchain.protobuf;

//声明一个服务名称
service MistralService {
  //请求参数MistralRequest   响应参数MistralResponse
  rpc SayHello (MistralRequest) returns (MistralResponse);
}

//请求
message MistralRequest {
  string name = 1;
}

//响应
message MistralResponse {
  string message = 1;
}


// protoc --proto_path=src/main/resources/protobuf --java_out=src/main/java src/main/resources/protobuf/hello_world.proto
